# slidescanner

./: .gitignore  README.md  SPEC.md  flake.nix  main.py  pyproject.toml  requirements.txt
EDSDK/Doc/: 01-Introduction.md  02-Overview.md  03-API-Reference.md  04-Asynchronous-Events.md  05-Properties.md  README.md
EDSDK/Header/: EDSDK.h  EDSDKErrors.h  EDSDKTypes.h
bindings/: edsdk_wrapper.cpp  edsdk_wrapper.h  setup.py
src/: application.py  application_abstract.py  auto_capture.py  camera.py  camera_controls.py  camera_core.py  common_signal.py  constants.py  date_utils.py  event_handlers.py  exif_utils.py  graphs.py  header_bar.py  live_view.py  main_content.py  picture.py  settings.py  shared_state.py  shortcuts.py  slide_scanner_window.py  tool_bar.py  ui_components.py
src/camera_core/: __init__.py  download.py  err.py  manager.py  object_events.py  prop_values.py  properties.py  sdk.py  state_events.py
src/components/: auto_capture.py  camera_settings.py  cassette_info.py
